examples/napi/tests/build_error_tests/class_reference_field_mut.stderr
error: Borrowed reference fields (`&T` or `&mut T`) cannot be stored in a napi class because no `NativeBorrowScope` spans the class lifetime; store an owned value instead
 --> tests/build_error_tests/class_reference_field_mut.rs:5:14
  |
5 |   pub value: &mut String,
  |              ^^^^^^^^^^^
