examples/napi/tests/build_error_tests/class_reference_field_mut.rs
use napi_derive::napi;

#[napi]
pub struct MutableReferenceField {
  pub value: &mut String,
}

fn main() {}
